@@ -4,7 +4,8 @@ Changelog for Touchdown
 0.0.32 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Change how SSH connection to an ASG is achieved (allows private ip addresses
+  to be used when on same network, even when using ``.get_auto_scaling_group``.
 
 
 0.0.31 (2015-09-07)
